added description of Figure, FigureCanvas and axes

--- a/demos/05_matplotlib.ipynb
+++ b/demos/05_matplotlib.ipynb
@@ -15,7 +15,7 @@
     "## Ojective\n",
     "In this lab session we will provide a short tutorial to ``Matplotlib``. We will present:\n",
     "\n",
-    "1) The ``matplotlib.pyplot`` module that provides a procedural interface similar to those of Matlab and Mathematica\n",
+    "1) The ``matplotlib.pyplot`` module that provides a procedural interface similar to that of Matlab\n",
     "\n",
     "2) The Object Oriented API of Matplotlib, which allows for the maximum control "
    ]
@@ -61,7 +61,8 @@
    "source": [
     "import matplotlib\n",
     "import matplotlib.pyplot as plt\n",
-    "%matplotlib inline"
+    "%matplotlib inline\n",
+    "# magic command that sets the backend of matplotlib to the 'inline' backend "
    ]
   },
   {
@@ -187,11 +188,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "So far we have created simple plots, like the ones you had to create for your first two assignments, using the ``Pyplot`` API. ``Pyplot`` provides a procedural interface similar to the one that you might have been used to from Matlab. However, an important drawback of ``Pyplot`` is that it does not keep the figure instance open. \n",
-    "\n",
-    "In order to understand this, you can type ``plt.plot(#whatever you want to plot)`` in a cell and execute it and then, in the following cell, type ``plt.title('My plot')``. When you execute the second cell an empty figure with a title \"My plot\" will be created, but no title will have been added to your original plot.\n",
-    "\n",
-    "So, what should you do if you want to create a more sophisticated plot where you might want to go back to later in your program and add/edit some of its elements? You can do that by using the Object Oriented API of ``Matplotlib``."
+    "So far we have created simple plots, like the ones you had to create for your first two assignments, using the ``Pyplot`` API. ``Pyplot`` provides a procedural interface similar to the one that you might have been used to from Matlab. However, the Object Oriented API of ``Matplotlib`` offers greater control and customization of the plots and therefore it is recommended to new ``Matplotlib`` users to learn how to use it. "
    ]
   },
   {
@@ -209,7 +206,13 @@
     "\n",
     "1) We created a figure instance describing the plot window and all of its properties.\n",
     "\n",
-    "2) We added an axes element within the figure. The axes element allows for the data to be arranged in x and y coordinates and provides a wide range of functions. Find out more about the axes class [here](https://matplotlib.org/api/axes_api.html)."
+    "2) We added an axes element within the figure. The axes element allows for the data to be arranged in x and y coordinates and provides a wide range of functions. The axes class will be your \"best friend\" for creating plots with the OO API and you can find out more about it [here](https://matplotlib.org/api/axes_api.html).\n",
+    "\n",
+    "In order to fully understand ``Matplotlib`` you should have a look at [this tutorial](https://matplotlib.org/users/artists.html) in order to learn about the underlying concepts of ``Artist``, ``FigureCanvas`` and ``Renderer``.\n",
+    "\n",
+    "However, the basics in order to get you started are:\n",
+    "* The ``FigureCanvas`` is where your ``Figure`` will be drawn. When you use ``Pyplot`` to create a ``Figure`` instance, the ``FigureCanvas`` instance is created for you; you do not have to specify anything explicitly. In any other case you have to specify the ``FigureCanvas``. This will also be the case when you want your ``Figure`` to appear in a Graphical User Interface (GUI).\n",
+    "* The ``Figure`` will be the final \"picture\". A ``Figure`` may contain one or more plots. The ``Axes`` represents each individual plot."
    ]
   },
   {
@@ -217,13 +220,6 @@
    "metadata": {},
    "source": [
     "### Example 2.1: Using the agg backend."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "In order to fully understand this example you should first have a look at [this tutorial](https://matplotlib.org/users/artists.html) in order to understand the underlying concepts of ``Artist``, ``FigureCanvas`` and ``Renderer``."
    ]
   },
   {
@@ -267,7 +263,7 @@
    },
    "outputs": [],
    "source": [
-    "ax.set_title('I changed the title')\n",
+    "ax.set_title('My new title')\n",
     "fig.savefig('test')"
    ]
   },
@@ -308,7 +304,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### A: Create an interactive figure using pyplot and create an axes instance on the figure"
+    "#### A: Create a figure using pyplot and create an axes instance on the figure with ``gca``"
    ]
   },
   {
@@ -320,16 +316,16 @@
    "outputs": [],
    "source": [
     "fig1 = plt.figure()\n",
-    "# Get the current :class:`~matplotlib.axes.Axes` instance on the current figure\n",
+    "# Get the current axes instance on the current figure\n",
     "ax1=fig1.gca()\n",
-    "#type(fig1.canvas)"
+    "print(type(fig1.canvas))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### B: Create an interactive figure using pyplot and add a subplot instance on the figure"
+    "#### B: Create a figure using pyplot and add an axes instance on the figure with ``add_subplot``"
    ]
   },
   {
@@ -342,7 +338,7 @@
    "source": [
     "fig2 = plt.figure()\n",
     "ax2=fig2.add_subplot(111)\n",
-    "#type(fig2.canvas)"
+    "print(type(fig2.canvas))"
    ]
   },
   {
@@ -360,6 +356,7 @@
    },
    "outputs": [],
    "source": [
+    "#scatterplot\n",
     "a = np.random.randint(1, 100, size=10)\n",
     "b = np.random.randint(1, 100, size=10)\n",
     "ax1.scatter(a, b, color ='red', edgecolors='black')\n",
@@ -379,6 +376,7 @@
    },
    "outputs": [],
    "source": [
+    "#optical illusion by Jake VanderPlas\n",
     "from matplotlib.collections import PatchCollection\n",
     "\n",
     "squares = [plt.Rectangle((i + 0.2 * (j % 3), j), 1, 1)\n",
