demo 4: some text edits

--- a/demos/04_networkx.ipynb
+++ b/demos/04_networkx.ipynb
@@ -380,7 +380,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Random manifold-based network (part of the assignment)"
+    "### Random manifold-based network"
    ]
   },
   {
@@ -414,7 +414,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "nodes = np.random.rand(100,2)"
+    "nodes = np.random.rand(100, 2)"
    ]
   },
   {
@@ -422,9 +422,9 @@
    "metadata": {},
    "source": [
     "Plot the graph using NetworkX. \n",
-    "* Hint: \n",
-    "    - **nx.from_numpy_array(adj)** creates a graph object from an adjacency matrix (in numpy form)\n",
-    "    - **nx.draw(G,pos)** will draw vertices at coordinates specified in pos. Variable pos is a dictionary assigning a pair of coordinates to each node."
+    "* Hints: \n",
+    "    - `nx.from_numpy_array(adj)` creates a graph object from an adjacency matrix (in numpy form)\n",
+    "    - `nx.draw(G,pos)` will draw vertices at coordinates specified in pos. Variable pos is a dictionary assigning a pair of coordinates to each node."
    ]
   },
   {
