demo 5: edits, imports, show saved figures

--- a/demos/05_matplotlib.ipynb
+++ b/demos/05_matplotlib.ipynb
@@ -17,7 +17,7 @@
     "\n",
     "1) The ``matplotlib.pyplot`` module that provides a procedural interface similar to that of Matlab\n",
     "\n",
-    "2) The Object Oriented API of Matplotlib, which allows for the maximum control "
+    "2) The Object Oriented API of Matplotlib, which allows for maximum flexibility "
    ]
   },
   {
@@ -45,20 +45,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "import scipy.sparse as ss"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import matplotlib\n",
-    "import matplotlib.pyplot as plt\n",
     "%matplotlib inline\n",
-    "# magic command that sets the backend of matplotlib to the 'inline' backend "
+    "# magic command that sets the backend of matplotlib to the 'inline' backend \n",
+    "\n",
+    "import numpy as np\n",
+    "from scipy import sparse\n",
+    "import IPython.display as ipd\n",
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
@@ -92,7 +85,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Example 1.2: Plot the sparsity pattern on a 2-D array."
+    "### Example 1.2: Plot the sparsity pattern of a 2-D array."
    ]
   },
   {
@@ -111,7 +104,7 @@
     "row_ind = np.array([1, 3, 9, 7, 6, 9 ,2, 5, 8, 3, 7, 8])\n",
     "col_ind = np.array([2, 5, 8, 3, 7, 8, 1, 3, 9, 7, 6, 9])\n",
     "data = np.array([1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1])\n",
-    "W = ss.csr_matrix((data,(row_ind, col_ind)),shape=(10, 10)).toarray()\n",
+    "W = sparse.csr_matrix((data,(row_ind, col_ind)),shape=(10, 10)).toarray()\n",
     "#np.nonzero(W-W.transpose())"
    ]
   },
@@ -234,8 +227,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Open the file test.png to see the plot that you created.\n",
-    "\n",
+    "Open the file `test.png` to see the plot that you created."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ipd.Image(filename='test.png') "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Now, change the title in your created plot as follows:"
    ]
   },
@@ -257,6 +264,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ipd.Image(filename='test.png') "
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -269,7 +285,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%matplotlib notebook \n",
+    "%matplotlib notebook\n",
     "#activate the nbagg backend, which enables interactivity within the Jupyter Notebook"
    ]
   },
@@ -383,7 +399,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now, you can spend sometime to create you own plots with ``Matplotlib``. Have fun!"
+    "Now, you can spend some time to create you own plots with `Matplotlib`. Have fun!"
    ]
   },
   {
@@ -398,5 +414,5 @@
  ],
  "metadata": {},
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
