demo 4: fix errors

--- a/demos/04_networkx.ipynb
+++ b/demos/04_networkx.ipynb
@@ -401,7 +401,7 @@
     "    for i in range(len(nodes)):\n",
     "        for j in range(i+1, len(nodes)):\n",
     "            arr = np.linalg.norm(nodes[i]-nodes[j])\n",
-    "            if (arr<tresh):\n",
+    "            if (arr<threshold):\n",
     "                d = np.exp(-arr/(2*theta**2))\n",
     "                adj[i][j] = d\n",
     "                adj[j][i] = d\n",
@@ -451,7 +451,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "g = nx.from_numpy_matrix(gr)\n",
+    "g = nx.from_numpy_matrix(adj)\n",
     "plt.spy(nx.adjacency_matrix(g).todense())"
    ]
   },
