unify notebook titles

--- a/demos/04_networkx.ipynb
+++ b/demos/04_networkx.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Lab Session 3: Network models with NetwokX\n",
+    "# NTDS demo 4: Network models with NetwokX\n",
     "Hermina Petric Maretic, *PhD student*, [EPFL](http://epfl.ch) [LTS4](http://lts4.epfl.ch)"
    ]
   },
