--- a/demos/05_matplotlib.ipynb
+++ b/demos/05_matplotlib.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Lab Session 4: Plotting with Matplotlib\n",
+    "# NTDS demo 5: Plotting with Matplotlib\n",
     "[Effrosyni Simou](http://lts4.epfl.ch/simou), *PhD Student*, [EPFL](http://epfl.ch) [LTS4](http://lts4.epfl.ch)"
    ]
   },
