Pascal's comments on project description

--- a/projects/ntds_projects.tex
+++ b/projects/ntds_projects.tex
@@ -83,8 +83,8 @@
 	\begin{enumerate}
 		\item Define a problem.
 			\begin{itemize}
-				\item Form groups.
-				\item Write a proposal.
+				\item Form groups \todo{of 4 students}.
+				\item Write a short but convincing proposal.
 			\end{itemize}
 		\vfill
 		\item Solve it.
@@ -111,7 +111,8 @@
 	\vfill
 	%Sources of inspiration:
 	\begin{itemize}
-		\item Classic problems: Computer Vision, Natural Language Processing.
+		\item Classic problems: Network Science, recommendation, Natural
+			Language Processing, Computer Vision.
 		\vfill
 		\item Social websites are a wealth of information.\footnote{Not only
 			Facebook and Twitter, but also GitHub, Pinterest, StackOverflow,
@@ -138,7 +139,12 @@
 	\begin{itemize}
 		\item \href{https://github.com/mdeff/fma}{Free Music Archive (FMA)}
 		\item \href{http://snap.stanford.edu/data/index.html}{Stanford Large Network Dataset Collection (SNAP)}
-		\item \todo{We need more!}
+		\item \href{https://doi.org/10.5281/zenodo.886484}{Wikipedia graph \& visits}
+			\begin{itemize}
+				\item See e.g. \href{http://blog.miz.space/research/2017/08/14/wikipedia-collective-memory-dynamic-graph-analysis-graphx-spark-scala-time-series-network/}{Wikipedia graph mining: dynamic structure of collective memory}.
+			\end{itemize}
+		\item Brain, e.g. \url{https://www.humanconnectome.org}
+		\item \todo{We need more! Shall we be specific?}
 		% Look at ADA and my list
 	\end{itemize}
 \end{frame}
@@ -163,11 +169,15 @@
 		\define{Data acquisition} from the web, a database, a flat file, etc.
 			This includes cleaning the data.
 		\vfill
-		\define{Data exploration} some exploratory analysis to describe what
-			you got. Very important to understand your data.
+		\define{Data exploration} some exploratory analysis to describe
+			properties of the data and understand the content.
 		\vfill
-		\define{Data exploitation} use the data to draw conclusions.
+		\define{Data exploitation} use the data to solve a task, to infer
+			knowledge, to draw conclusions.
 			The concepts and algorithms taught in class must be used.
+		\vfill
+		\define{Conclusion} discuss the results and summarize your findings.
+			What did we learn from the data and the project?
 	\end{enumerate}
 \end{frame}
 
@@ -193,7 +203,8 @@
 \begin{frame}
 	\frametitle{Rules}
 	\begin{itemize}
-		\item The project includes graph and network data aspects, and more generally falls under the scope of the class.
+		\item The project includes graph and network data aspects, and more
+			generally falls under the scope of the class.
 		\vfill
 		\item Form groups of 3 or 4 students. No less, no more.
 			\begin{itemize}
@@ -201,11 +212,13 @@
 				\item The names of all members should clearly appear.
 			\end{itemize}
 		\vfill
-		\item The project should follow the data acquisition, exploration and exploitation workflow.
+		\item The project should follow the data acquisition, exploration and
+			exploitation workflow.
 		\vfill
-		\item Collecting data manually is optional, i.e. the use of datasets is allowed. \todo{Do we ask to compensate?}
+		\item Collecting data manually is optional, i.e. the use of datasets is
+			allowed. Data collection is a plus however.
 		\vfill
-		\item Each member will speak during the project presentation.
+		\item Each member of a team shall contribute equally to the project.
 	\end{itemize}
 \end{frame}
 
@@ -217,7 +230,7 @@
 		\define{Proposal} define the problem and explain your plan.
 			\begin{itemize}
 				\item Single page document.
-				\item Organize yourselves in groups of three or four people.
+				\item Organize yourselves in groups of three or four students.
 				\item Deadline: Tuesday, November 28, 2017. Upload on Moodle.
 				\item Not graded. Discussion with TAs will follow.
 			\end{itemize}
@@ -225,22 +238,36 @@
 		\define{Report} your solution, using the theory seen in class and the
 			practical skills trained during labs.
 			\begin{itemize}
-				\item Jupyter notebook with text, math, code, analyzes and
+				\item Jupyter notebook with text, math, code, analysis and
 					results.
 				\item The notebook will be posted on the course git repository,
 					on GitHub. You can use it for your portfolio!
 				\item Deadline: Friday, January 12, 2017. Upload on Moodle.
-				\item Graded.
+				\item Graded (project accounts for 50\% of class grade).
 			\end{itemize}
 		\vfill
-		\define{Presentation} impress us!
+		\define{Presentation} impress us with your work!
 			\begin{itemize}
 				\item Presentation of 15 minutes followed by 5 minutes of questions.
 				\item Each group member must talk.
 				\item Register for January 24 or 25 (once exams are scheduled).
-				\item Graded.
+				\item Graded (project accounts for 50\% of class grade).
 			\end{itemize}
 	\end{enumerate}
+\end{frame}
+
+%------------------------------------------------
+
+\begin{frame}
+	\Huge
+	\begin{center}
+		\vspace{0.2cm}
+		Have fun! \hspace{1cm} Questions?
+		\vspace{0.5cm}
+		\begin{figure}
+		\includegraphics[width=\linewidth]{projects_2016}
+		\end{figure}
+	\end{center}
 \end{frame}
 
 \end{document}
