--- a/demos/06_webapi_pandas.ipynb
+++ b/demos/06_webapi_pandas.ipynb
@@ -23,7 +23,7 @@
    "source": [
     "### 1.1 API doc\n",
     "\n",
-    "The first step is always to look at the API documentation. In our case: <https://freemusicarchive.org/api>. Some of you might have referred to the [Twitter API doc](https://developer.twitter.com/en/docs) for the first assignment.\n",
+    "The first step is always to look at the API documentation. Two questions to answer: i) how to construct the uniform resource locator (URL), and ii) how to interpret the returned data. For this tutorial and the third assignment: <https://freemusicarchive.org/api>. (Some of you might have referred to the [Twitter API doc](https://developer.twitter.com/en/docs) for the first assignment.)\n",
     "\n",
     "**Start simple**. Send an HTTP GET request with your web browser to the following uniform resource locator (URL): <https://freemusicarchive.org/recent.json>."
    ]
@@ -106,6 +106,7 @@
    "source": [
     "# Read the confidential api key.\n",
     "import configparser\n",
+    "import os\n",
     "credentials = configparser.ConfigParser()\n",
     "credentials.read(os.path.join('..', 'credentials.ini'))\n",
     "api_key = credentials.get('freemusicarchive', 'api_key')"
@@ -138,7 +139,7 @@
    "source": [
     "## 2 JSON\n",
     "\n",
-    "The goal of an HTTP GET request is to get data. The returned data might be HTML (as you see when you browse the web), XML, JSON, etc. Most web APIs nowadays return data formated as [JSON](https://en.wikipedia.org/wiki/JSON). In JSON, data objects consist of key-value pairs and lists. The data format is thus well modeled by Python dictionaries and lists, and is exposed as such by e.g. the [json module](https://docs.python.org/3/library/json.html) in the standard library."
+    "The goal of an HTTP GET request is to get data. The returned data might be HTML (as you see when you browse the web), XML, JSON, etc. Most web APIs nowadays return data formated as [JSON](https://en.wikipedia.org/wiki/JSON). As JSON data objects consist of key-value pairs and lists, the format is well modeled by Python dictionaries and lists."
    ]
   },
   {
@@ -154,7 +155,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The above call to `json()` interprets the returned data as being JSON and constructs Python dictionary and list objects out of it. In this case the top-level object is a dictionary, with many keys."
+    "The above call to `json()` interprets the returned data as being JSON and constructs Python dictionary and list objects out of it. In this case the top-level object is a dictionary, with some keys."
    ]
   },
   {
@@ -197,7 +198,15 @@
    "outputs": [],
    "source": [
     "print(type(data['aTracks']))\n",
-    "\n",
+    "print(data['aTracks'][0].keys())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "for track in data['aTracks'][:5]:\n",
     "    print(track['track_title'])"
    ]
@@ -232,16 +241,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3 Pandas, data analysis in Python\n",
+    "## 3 Pandas: data analysis in Python\n",
     "\n",
-    "While it might be sufficient to keep the data as list and dictionaries, we often prefer to see data in a tabular format for analysis. A tabular format allows to make operations on the rows and columns, e.g. by taking a sum over prices. At a large scale, tabular data is stored in a [database](https://en.wikipedia.org/wiki/Database) (think the list of clients of a large compagny). At a small scale, you probably used it in the form of an Excel spreadsheet. In Python, [pandas](https://pandas.pydata.org) is the most used data analysis tool. You can think of it as a *programmable spreadsheet*."
+    "While it might be sufficient to keep the data as lists and dictionaries, we often prefer to see data in a tabular format for analysis. A tabular format allows to make operations on the rows and columns, e.g. by taking a sum over prices. At a large scale, tabular data is stored in a [database](https://en.wikipedia.org/wiki/Database) (think the list of clients of a compagny). At a small scale, you probably used it in the form of an Excel spreadsheet. In Python, [pandas](https://pandas.pydata.org) is the most used data analysis tool. You can think of it as a *programmable spreadsheet*."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's first create a simple table, called a `DataFrame` in pandas' language. We can initialize the table with a Python list or a NumPy array. Let's say we want to do some accounting for our family and define the following schema: each row is a member of the family, the first column represents its revenue and the second its expenses. Sure enough, we can create a NumPy array."
+    "Let's first create a simple table, called a `DataFrame` in pandas' language. We can initialize the table with e.g. a Python list or a NumPy array. As our running example, let's say we want to do some accounting for our family and define the following schema: each row is a member of the family, the first column represents the revenue and the second the expenses. Sure enough, we can create a NumPy array."
    ]
   },
   {
@@ -298,7 +307,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now if I want to know how much Alison spent this month, I don't have to remember that Alison is the 3 row and that the expenditures are the second column. I can query:"
+    "Now if I want to know how much Alison spent this month, I don't have to remember that Alison is the third row and that the expenditures are the second column. I can query:"
    ]
   },
   {
@@ -314,7 +323,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "I may want to compute the entire familiy revenues (note the similarity with the way you would do it in a spreadsheet):"
+    "We may want to compute the revenue of the entire familiy (note the similarity with the way you would do it in a spreadsheet):"
    ]
   },
   {
@@ -347,6 +356,38 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Another quite useful feature is selection:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "accounts[accounts['balance'] < 0]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Or sorting:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "accounts.sort_values('expenditures')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Now it's time to save our data for archival, or to open it up in another tool."
    ]
   },
@@ -356,7 +397,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "accounts.to_csv('family_accounts.csv')"
+    "accounts.to_csv(os.path.join('..', 'data', 'family_accounts.csv'))"
    ]
   },
   {
@@ -365,14 +406,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!cat family_accounts.csv"
+    "!cat ../data/family_accounts.csv\n",
+    "# Windows: !type ..\\data\\family_accounts.csv"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "These are the basic operations. More info in the [docs](http://pandas.pydata.org/pandas-docs/stable/)."
+    "These are very basic operations to give you an idea of what pandas is. More info in the [docs](http://pandas.pydata.org/pandas-docs/stable/). That library will certainly be useful for your projects."
    ]
   },
   {
