--- a/demos/06_webapi_pandas.ipynb
+++ b/demos/06_webapi_pandas.ipynb
@@ -127,8 +127,8 @@
    "source": [
     "ARTIST_ID = 58\n",
     "\n",
-    "url = # Your code here.\n",
-    "\n",
+    "BASE_URL = 'https://freemusicarchive.org/api/get/artists.json'\n",
+    "url = '{}?artist_id={}&api_key={}'.format(BASE_URL, ARTIST_ID, api_key)\n",
     "print(url)\n",
     "requests.get(url).content"
    ]
@@ -231,7 +231,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "genres = # Your code here.\n",
+    "genres = [genre['genre_title'] for genre in data['nav_genres']]\n",
     "\n",
     "assert type(genres) is list\n",
     "print(genres)"
@@ -432,7 +432,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#tracks = # Your code here.\n",
+    "tracks = pd.DataFrame(data['aTracks'])\n",
     "assert type(tracks) is pd.DataFrame\n",
     "tracks.head()"
    ]
@@ -443,7 +443,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here."
+    "tracks['artist_name'].value_counts()"
    ]
   }
  ],
