assignment 3: data collection

--- a/assignments/03_spectral_graph_theory.ipynb
+++ b/assignments/03_spectral_graph_theory.ipynb
@@ -25,6 +25,10 @@
    "source": [
     "%matplotlib inline\n",
     "\n",
+    "import configparser\n",
+    "import os\n",
+    "\n",
+    "import requests\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
@@ -38,9 +42,76 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1 Data collection from the FMA\n",
+    "## 1 Data collection\n",
     "\n",
-    "In the first part of the assignment, we are going to collect some data."
+    "Like in any data project, the first part of the assignment is to collect some data. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1.1 Get the genre of a single track"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As often, we need an API key for certain operations. Add the following to your `credentials.ini` file. I gave a key during November 6th lab. If you were not there, ask one of your colleague.\n",
+    "```\n",
+    "[freemusicarchive]\n",
+    "api_key = MY-KEY\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Read the confidential api key.\n",
+    "credentials = configparser.ConfigParser()\n",
+    "credentials.read(os.path.join('..', 'credentials.ini'))\n",
+    "api_key = credentials.get('freemusicarchive', 'api_key')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Your first task is to develop a function to retrieve the genre ID of a track given its track ID using the [FMA API](https://freemusicarchive.org/api).\n",
+    "\n",
+    "Hints:\n",
+    "* A track might have multiple genres associated to it. Always return the first one and discard the others. Note: you should never discard data blindly. I selected the tracks so that this is not a problem.\n",
+    "* The `get_genre` function takes an integer as input, the track ID, and returns another integer, the genre ID."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_genre(track_id):\n",
+    "    \"\"\"Returns the genre of a track by querying the API.\"\"\"\n",
+    "    BASE_URL = 'https://freemusicarchive.org/api/get/tracks.json'\n",
+    "    url = '{}?track_id={}&api_key={}'.format(BASE_URL, track_id, api_key)\n",
+    "    response = requests.get(url).json()\n",
+    "    return int(response['dataset'][0]['track_genres'][0]['genre_id'])\n",
+    "\n",
+    "# A correct implementation should pass the below test.\n",
+    "assert get_genre(1219) == 38"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1.2 Create a table of tracks\n",
+    "\n",
+    "The `fma_tracks.csv` file contains a list of 2'000 tracks that we will use through this assignment. Each track belongs to either one of the following *top-level genres*: Electronic (`genre_id=12`) and Hip-Hop (`genre_id=21`)."
    ]
   },
   {
@@ -50,45 +121,153 @@
    "outputs": [],
    "source": [
     "tracks = pd.read_csv('../data/fma_tracks.csv', index_col=0)\n",
-    "genres = pd.read_csv('../data/fma_genres.csv', index_col=0)\n",
-    "features = pd.read_csv('../data/fma_features.csv', index_col=0, header=[0, 1, 2])\n",
-    "\n",
-    "#tracks.drop(20366, inplace=True)\n",
-    "#features.drop(20366, inplace=True)\n",
-    "\n",
-    "#tracks = tracks[:1000]\n",
-    "#features = features[:1000]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "genre1 = tracks['genre'] == 1235  # Instrumental\n",
-    "genre2 = tracks['genre'] == 21    # Hip-Hop\n",
-    "\n",
-    "features = features.loc[genre1 | genre2, 'mfcc']\n",
-    "genres = tracks.loc[genre1 | genre2, 'genre']\n",
-    "\n",
-    "features.shape, genres.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sum(genre1), sum(genre2)"
+    "print('You got {} track IDs.'.format(len(tracks)))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Listen to the music"
+    "Once imported by pandas, each row of the DataFrame represents a track."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tracks.head(4)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1.3 Add the genre to the table\n",
+    "\n",
+    "Your task is to add a `genre` column to the above created `tracks` DataFrame. The column should contain an integer which represents the genre of the track, i.e. the return value of the `get_genre` function you developed.\n",
+    "\n",
+    "Hints:\n",
+    "* When developing, retrieve the genre of the first 10 tracks only. Only once your code works run it through all the tracks. That will save you time.\n",
+    "* As we want to apply one function (`get_genre`) to many data samples (the 2000 track IDs), use a functional approach. Check out `tracks.apply()`.\n",
+    "* In Python, you can declare an [anonymous function](https://en.wikipedia.org/wiki/Anonymous_function) as `lambda x: x + 1`.\n",
+    "* Your table should look like the below table, except with the correct number instead of 0."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tracks['genre'] = 0\n",
+    "tracks.head(4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tracks = tracks[:3]\n",
+    "\n",
+    "tracks['genre'] = tracks.apply(lambda track: get_genre(track.name), axis=1)\n",
+    "\n",
+    "# Alternatively:\n",
+    "# tracks['genre'] = list(map(get_genre, tracks.index))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tracks.head(4)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1.4 Save the data\n",
+    "\n",
+    "To avoid having to collect the data everytime you restart the kernel, save the DataFrame as a CSV file."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#tracks.to_csv('../data/fma_tracks_with_genre.csv')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "You can now load it back with the following call instead of running the code in sections 1.1 to 1.3."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tracks = pd.read_csv('../data/fma_tracks_with_genre.csv', index_col=0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1.5 Data cleaning\n",
+    "\n",
+    "As always, data cleaning is necessary when dealing with real (as opposed to synthetic) data. In this case, we only need to \"summarize the genres\". The tracks I've selected for the assignment are only part of the Electronic and Hip-Hop top genres. There *actual genre(s)* might however be more specific and be a sub-genre of those too. E.g. IDM is a sub-genre of Electronic. You can explore the genre hierarchy on the [Free Music Archive](http://freemusicarchive.org/genre/Electronic/)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#tracks_m.loc[tracks.index, ('track', 'genres')].apply(lambda x: x[0]).unique()\n",
+    "#tracks['genre'] = tracks_m.loc[tracks.index, ('track', 'genres')].apply(lambda x: x[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_top_genre(genre_id):\n",
+    "    return 21 if genre_id in [21, 83, 100, 539, 542, 811] else 12\n",
+    "\n",
+    "tracks = tracks.applymap(lambda genre: get_top_genre(genre))\n",
+    "tracks.head(4)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If everything went fine, you should now have 1000 Rock (`genre_id=12`) and 1000 Hip-Hop (`genre_id=12`) tracks."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tracks['genre'].value_counts()"
    ]
   },
   {
@@ -106,7 +285,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Listen to the music"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Feature normalization"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "features = pd.read_csv('../data/fma_features.csv', index_col=0, header=[0, 1, 2])\n",
+    "features = features.loc[tracks.index, 'mfcc']\n",
+    "assert (tracks.index == features.index).all()\n",
+    "\n",
+    "features.shape, tracks.shape"
    ]
   },
   {
@@ -420,7 +619,7 @@
     "\n",
     "features_pca = skl.decomposition.PCA(n_components=2).fit_transform(features)\n",
     "\n",
-    "genres = skl.preprocessing.LabelEncoder().fit_transform(genres)\n",
+    "genres = skl.preprocessing.LabelEncoder().fit_transform(tracks)\n",
     "\n",
     "plt.scatter(features_pca[:,0], features_pca[:,1], c=genres, cmap='RdBu', alpha=0.5);"
    ]
